[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = "0"
ff = "0"
itertools = "0"
rand_core = "0"
subtle = "2"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
rand_xorshift = "0"
ark-std = { version = "0", features = ["print-trace"] }
criterion = { version = "0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
